# open-library

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
openLibrary/: authors.py  book.py  constants.py  editions.py  ratings.py  search.py
openLibrary/common/: base.py  client.py
openLibrary/models/: books.py  data.py  id.py  search.py
openLibrary/models/regex/: lccn.py
src/home_library/: main.py
src/isbnClient/: client.py
src/openLibrary/: client.py
src/openLibrary/common/: exceptions.py
src/openLibrary/models/: books.py
tests/: test_models.py
tests/mock_data/: OL3140822W.json  OL498120A.json  OL9242848M.json  authors.json  editions.json  lccn.json  models.py  ratings.json  search.json  work.json  works.json
